--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
                 <div class="hero-avatar">
                     <div class="avatar-bg"></div>
                     <div class="avatar-content">
-                        <img src="boy.png" alt="Rakibul Islam" class="avatar-img">
+                        <img src="DSC_0508.jpg" alt="Rakibul Islam" class="avatar-img">
                     </div>
                     <div class="orbit orbit-1">
                         <div class="orbit-item"><i class="fab fa-python"></i></div>
