--- a/home.html
+++ b/home.html
@@ -18,8 +18,20 @@
         <div class="preloader-content">
             <div class="brain-animation">
                 <i class="fas fa-brain"></i>
+                <div class="brain-waves"></div>
             </div>
-            <div class="loading-text">Loading Portfolio...</div>
+            <div class="loading-text">
+                <span>L</span>
+                <span>o</span>
+                <span>a</span>
+                <span>d</span>
+                <span>i</span>
+                <span>n</span>
+                <span>g</span>
+                <span>.</span>
+                <span>.</span>
+                <span>.</span>
+            </div>
             <div class="progress-bar">
                 <div class="progress"></div>
             </div>
