--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Add EmailJS SDK in the head section -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Cursor -->
@@ -696,7 +698,7 @@
                 </div>
 
                 <div class="contact-form-container" data-aos="fade-left">
-                    <form class="contact-form" id="contact-form" action="https://formspree.io/f/yourformid" method="POST">
+                    <form class="contact-form" id="contact-form" onsubmit="sendEmail(event)">
                         <div class="form-group">
                             <input type="text" id="name" name="name" required>
                             <label for="name">Your Name</label>
