--- a/home.html
+++ b/home.html
@@ -414,7 +414,7 @@
                                 <h3>JR. AI Developer</h3>
                                 <span class="timeline-date">March 2025 - Present</span>
                             </div>
-                            <h4>Join Venture AI, Banasree</h4>
+                            <h4>Join Venture AI, Aqua Tower, Mohakhali</h4>
                             <p>Developing cutting-edge AI features for web and mobile applications, focusing on model optimization and performance tuning to deliver intelligent solutions.</p>
                             <div class="timeline-skills">
                                 <span class="skill-tag">AI Development</span>
